# cutf

./: .gitignore  CHANGELOG.md  CppToUft8.py  DirCToUtf8.py  Makefile  README.md  SrcCheckMissing.py  SrcToUtf8B.py  changelog.md  common.py  cutf.py  genexe.txt  project.mk  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: publish-chocolatey.yml  pypi.yml  release.yml
.mk/: convert_logo.py  gen-project-py
controller/: fileChecker.py  fileController.py  resultHandler.py
cuft/: app.py
cuft/controller/: fileChecker.py  fileController.py  resultHandler.py
cuft/model/: FileScanResult.py
cuft/util/: iconv.py
cutf/: app.py  project.py
cutf/controller/: aiFixController.py  fileChecker.py  fileController.py  resultHandler.py
cutf/model/: AppSetting.py  FileScanResult.py  MissingCharResult.py  __init__.py
cutf/util/: code.py  iconv.py  log.py  ollama.py  path.py  textfile.py
docs/: cli-params.md
model/: AppSetting.py  FileScanResult.py  MissingCharResult.py
old/: CppToUft8.py
old2/: DirCToUtf8.py  SrcCheckMissing.py  SrcToUtf8B.py  common.py
old2/util/: checks.py  iconv.py
tests/: __init__.py  fixture_manifest.py  support.py  test_ai_fix_controller.py  test_app.py  test_code_utils.py  test_end_to_end.py  test_file_checker.py  test_file_controller.py  test_iconv_utils.py  test_log_utils.py  test_models.py  test_path_utils.py  test_result_handler.py
tests/test_data/cpp/ascii/: ascii_cpp_case_01.cpp  ascii_cpp_case_02.cpp
tests/test_data/cpp/utf16/: utf16_cpp_case_01.cpp  (+1 more)
util/: checks.py  code.py  iconv.py  log.py  path.py
(+32 files in other folders)
