[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cutf"
version = "0.0.11"
description = "CLI tool to scan and convert source files to UTF-8 with BOM."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Gabliz" }]
keywords = ["encoding", "utf-8", "bom", "iconv", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "chardet>=5.2.0",
  "rich>=13.9.4",
]

[project.scripts]
cutf = "cutf.app:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 220

[tool.ruff.lint]
select = ["E", "F", "I"]



